Changed the target framework from 3.5 to 2.0. That means I cannot use HashSet so I'm using Dictionaries to ensure uniqueness of files to be searched.

--- a/VisualSearch.csproj
+++ b/VisualSearch.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>VisualSearch</RootNamespace>
     <AssemblyName>VisualSearch</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ApplicationIcon>res\docs\BINOCULR.ICO</ApplicationIcon>
     <StartupObject>VisualSearch.Program</StartupObject>
@@ -97,6 +97,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
